--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title></title>
+	</head>
+	<body>
+		<a href="startba://s/HBuilder/?name=fil&r=123">startba打开HBuilder</a><br /><br /><br />
+		<a href="wosecond://s/HBuilder/?name=fil&r=123">wosecond打开HBuilder</a><br /><br /><br />
+		<a href="hbuilder://s/HBuilder/?name=fil&r=123">hbuilder打开HBuilder</a><br /><br /><br />
+		<a href="streamapp://s/HelloH5/?name=fil&r=123">streamapp打开流应用HelloH5</a><br />
+		<a href="streamapphw://s/HelloH5/?name=fil&r=123">streamapphw打开流应用HelloH5</a><br />
+		<a href="streamappyunos://s/HelloH5/?name=fil&r=123">streamappyunos打开流应用HelloH5</a><br />
+		<a href="streamappmain://s/HelloH5/?name=fil&r=123">streamappmain打开流应用HelloH5</a><br />
+				<a href="streamapp://s/__W2A__m.sjjd.com/?__launch_path=https://ms.m.jd.com/seckill/seckillList">streamappmain打开手机京东的秒杀页面</a><br />
+		<a href="streamapp://s/HelloStreamAppDcloud/?name=fil&r=123">streamapp打开流应用HelloStreamAppDcloud</a><br />
+		<a href="streamapp-111://s/HelloStreamAppDcloud/?name=fil&r=123">streamapp-111打开流应用HelloStreamAppDcloud</a><br />
+		<a href="streamapphw://s/HelloStreamAppDcloud/?name=fil&r=123">streamapphw打开流应用HelloStreamAppDcloud</a><br />
+		<a href="streamappyunos://s/HelloStreamAppDcloud/?name=fil&r=123">streamappyunos打开流应用HelloStreamAppDcloud</a><br />
+		<a href="streamappmain://s/HelloStreamAppDcloud/?name=fil&r=123">streamappmain打开流应用HelloStreamAppDcloud</a>
+		
+		
+		
+				<a href="你配置的协议头://s/你应用的appid/">scheme打开appid的应用</a><br /><br /><br />
+	</body>
+</html>
